--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "proxy": "http://localhost:5000",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "client": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "vite build"
   },
   "dependencies": {
     "express": "^4.18.2",
