added env for the render url

--- a/server/Models/postgreSQL/database/.env
+++ b/server/Models/postgreSQL/database/.env
@@ -3,3 +3,4 @@ PASSWORD='jugodeub4'
 HOST='localhost'
 PORT=5432
 DATABASE='todoAppDatabase'
+URL="postgres://todoappdatabase_user:86NegNcGMLrhyatSuN8OlnAKZ8M6fhEQ@dpg-cmbofe6d3nmc73ektfdg-a.oregon-postgres.render.com/todoappdatabase"
